# inference-in-cpp

./: .gitignore  CMakeLists.txt  README.md
src/onnx/: CMakeLists.txt  inference.cpp
src/train/: README.md  mnist_model.onnx  requirements.txt  train.ipynb
src/train/model/mnist_model/: keras_metadata.pb  saved_model.pb
src/train/model/mnist_model/variables/: variables.data-00000-of-00001  variables.index
